# retazos

./: Main.hs  README.md  retazos.cabal
lib/: Retazos.hs
lib/Retazos/: Main.hs
test/: tests.hs
