cabal-version:       3.0

name:                retazos
version:             0.1.0.0
synopsis:            Select and publish passages from plain text.
-- description:         
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Control
extra-source-files:  CHANGELOG.md, README.md

source-repository    head
  type:     git
  location: https://github.com/danidiaz/retazos.git

common common
  build-depends:       base >=4.10.0.0 && < 5,
                       transformers ^>= 0.5.0.0,
                       mtl ^>= 2.2,
                       bytestring ^>= 0.11.1.0
  default-language:    Haskell2010

executable retazos-server
  import: common
  main-is: Main.hs
  build-depends:       retazos

library
  import: common
  exposed-modules:     Retazos
  hs-source-dirs:      lib 

test-suite tests
  import: common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       
    retazos, 
    text               ^>= 1.2.4.1,
    tasty              ^>= 1.3.1,
    tasty-hunit        ^>= 0.10.0.2,

